--- a/docs/titlepag.tex
+++ b/docs/titlepag.tex
@@ -125,6 +125,7 @@
 % Words that may get hyphenated oddly if TeX is allowed to do so
 %
 \hyphenation{gnuplot windrose}
+\uchyph=0
 
 \begin{document}
 
