--- a/TODO
+++ b/TODO
@@ -5,8 +5,6 @@
 COMMANDS:
 =========
 
- -- record/playback of multiplot command sequence
-
 DOCUMENTATION:
 ==============
 
@@ -77,8 +75,6 @@ Ethan's list of ideas for development series 6
 
 Code cleanup
 ------------
-- Refactor VMS conditionals so that all the code is in vms.c
-  Drop VMS altogether?
 - Matrix data should be stored as (double) not (float)
 - Audit all FIXMEs, some must be out of date
 - Remove non-IEEE math constants?
@@ -88,20 +84,14 @@ Build system options
 --------------------
 - OSX autoconf
 - all-qt or all-cairo build targets
-- emscriptem build target
+- emscriptem or WebAssembly build target
 
 Terminals
 ---------
 - canvas terminal overhaul (use browser's font support)
 - possible updates for
-  dxy aquaterm 
+	dxy aquaterm
 - outboard driver for wxt
-- libgd routines are used for core operations such as
-  "binary filetype=xxx" and pixmap.  Can these alternatively use cairo
-  or libpng instead, removing a dependence on libgd?
-  Direct use of libpng would allow input of 16bit or 32bit png data
-  without loss of precision (cairo and libgd only keep 8 bits on input).
-- webp animation (including yuv color space for better compression)
 
 Fitting
 -------
@@ -114,9 +104,13 @@ Math
   Better precision, extension to complex values wherever possible,
   document algorithms used with citations and expected precision.
 - consistent handling of NaN, +Inf, -Inf, and underflow.
+- floating point exception traps are apparently not reliable
+  across library/compiler versions
 
 Features
 --------
+- built-in readline could do much better at editing very long lines
+	rewrite to use ncurses?
 - Rework image input code so that image data can be processed as data
   e.g. extract/modify individual channels from ARGB
        accept 16-bit PNG
@@ -126,10 +120,6 @@ Features
 	...
 	unset record
 	load "filename"
-- "remultiplot" could automate the above idea
-	'set multiplot' places a flag in the history
-	'unset multiplot' places a terminating flag
-	'remultiplot' replays history between the two flags
 - FIR filters
    Add a new class of smoothing operations that would allow user-provided
    Savitzky–Golay filters. Smoothed value at point x[i] would be calculated
