--- a/docs/titlepag.tex
+++ b/docs/titlepag.tex
@@ -124,7 +124,7 @@
 %
 % Words that may get hyphenated oddly if TeX is allowed to do so
 %
-\hyphenation{gnuplot windrose}
+\hyphenation{gnuplot windrose stringcolumn}
 \uchyph=0
 
 \begin{document}
