--- a/term/README
+++ b/term/README
@@ -181,7 +181,7 @@ currently selected options should be stored in term_options[] in a form
 suitable for use with the set term command.  term_options[] is used by 
 the save command.  Use options_null() if no options are available.
 _options() and _waitforinput() are the only terminal functions that may
-be called prior to _init(), so they must take not to perform actions
+be called prior to _init(), so they must take care not to perform actions
 that require previous initialisation.
 
 _init()  Called once, when the device is first selected.  This procedure
