docs: (lualatex, xelatex) remove requirement for package unicode-math

--- a/docs/titlepag.tex
+++ b/docs/titlepag.tex
@@ -35,7 +35,7 @@
     \usepackage{fontspec}
     \setmainfont{Free Serif} % could use TeX Gyre Termes
     \setmonofont{Free Mono}
-    \usepackage{unicode-math}
+    % \usepackage{unicode-math}
 \else\ifxetex
     % These commands are for use with xelatex
     % The default CM fonts are missing many unicode characters
@@ -45,7 +45,7 @@
         ItalicFont = FreeSerifItalic.otf ,
         BoldItalicFont = FreeSerifBoldItalic.otf ]
     \setmonofont{FreeMono.otf}
-    \usepackage{unicode-math}
+    % \usepackage{unicode-math}
 \else
     % These commands are for use with pdflatex
     \usepackage{ucs}
