--- a/config/README
+++ b/config/README
@@ -1,13 +1,15 @@
 Notes:
 - EAM Oct 2007: give up on Atari platforms
 - EAM Mar 2010: give up on Amiga and 16-bit DOS, WIN
+- BM  Oct 2025: add support for Windows on ARM
 
 List of files:
 cygwin/Makefile: Makefile for Cygwin on Windows
 djgpp/Makefile:  Makefile for DJGPP/MSYS on Windows for DOS/32bit
-mingw/Makefile:  Makefile for MinGW/MSYS and GNU make on Windows
-msvc/Makefile:   Makefile for Microsoft Visual C++ 2005 or later and nmake on Windows
+mingw/Makefile:  Makefile for MSYS2/MINGW64/CLANG64 on Windows
+msvc/Makefile:   Makefile for Microsoft Visual C++ and nmake on Windows
 watcom/Makefile: Makefile for OpenWatcom C++ on Windows
+woa/Makefile:    Makefile for MSYS2/CLANG64/CLANGARM64 for cross-compilation for Windows on ARM
 buildvms.com: Shell script on VMS
 make_vms.com: Shell script on VMS
 makefile.g:   Makefile on GRASS (a geographic information system)
