provide an example plugin that uses initializer/destructor functions
Until now gnuplot has only checked for and invoked the initializer function.
Now the corresponding destructor is also handled.

plugin2.dem exercises the new code.
The example plot is boring unless you modify the source code in
demo_plugin.c so that the exported routine newdata() reads an
actual temperature value from somewhere. Sample code is shown
that works on my Ryzen 7 test machine but quite possibly nowhere else.
Othewise you only see a pretend reading of 42.0°C plus noise.

--- a/demo/plugin/README
+++ b/demo/plugin/README
@@ -6,6 +6,10 @@ Source files are included here for two plugin libraries.
 demo_plugin.c provides three toy functions just for the purpose
 of running the unit test / demo "plugin.dem".
 
+demo_plugin.c also provides a less trivial function newdata()
+that has separate constructor/destructor functions needed for
+use.  These are exercised by running the demo "plugin2.dem".
+
 uigamma_plugin.c provides an implementation of the regularized
 upper incomplete gamma function Q(a,x) [NIST DLMF eq. 8.2.4].
 This function is already built in to gnuplot version 6 but it may
